--- a/blog/style/index.css
+++ b/blog/style/index.css
@@ -1,5 +1,5 @@
 .title{
-    width: 100%;
+    /* width: 100%; */
     height: 30px;
     background-color: #039BE5;
     font-family: PingFangSC-Regular;
@@ -12,15 +12,13 @@
 .time{
     width: 100%;
     height: 30px;
-    background-color:#F5F5F5;
     padding-left: 8px;
     line-height: 30px;
 }
 .context{
-    width: 100%;
+    background-color: #fff;
+    border: 1px #fff solid;
     height: 101px;
-    background-color:#FFFFFF;
-    padding-left: 8px;
 }
 .tail{
     width: 100%;
@@ -32,8 +30,14 @@
 }
 .article-title{
     font-family: PingFangSC-Regular;
-    font-size: 25px;
+    font-size: 17px;
+    background-color: #fff;
     color: #333333;
+    margin: 2.5% 22% 1.3% 4.4%;
     letter-spacing: 0;
-       
+}
+.hello {
+    background-color: #fff;
+    font-size: 12px;
+    padding: 8px 0 8px 10.6%;
 }
